--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "redux": "^4.0.0",
     "redux-form": "^7.4.2",
     "redux-form-validators": "^2.7.1",
+    "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
     "uuid": "^3.3.2"
   },
