--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
-    "react-scripts": "1.1.4",
+    "react-scripts": "^3.0.1",
     "redux": "^4.0.0",
     "redux-form": "^7.4.2",
     "redux-form-validators": "^2.7.1",
